--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -30,6 +30,10 @@
             <li class="nav-item">
               <a class="nav-link " href="#" >Courses</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" style="float: right;">Login</a>
+            </li>
+
           </ul>
           
         </div>
