--- a/index.html
+++ b/index.html
@@ -30,14 +30,28 @@
             <li class="nav-item">
               <a class="nav-link " href="#" >Courses</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" style="float: right;">Login</a>
-            </li>
 
           </ul>
-          
+
         </div>
       </nav>
+
+      <header class="jumbotron">
+        <div class="container">
+          <div class="row row-header">
+            <div class="col-12 col-sm-6">
+              <h1>Edu_Hub</h1>
+              <p>An educational website  for students to provide better opportunities to learn all subjects without going anywhere   </p>
+            </div>
+            <div class="col-12 col-sm-3 text-center align-self-center">
+              <img src="images/pp.jpeg" class="img-fluid" alt="Edu_Hub">
+            </div>
+            <div class="col-12 mt-5 mt-sm-0 col-sm-3 text-center align-self-center">
+              <button type="button" class="btn btn-block nav-link btn-warning" id="signup">SignUp</button>
+            </div>
+          </div>
+        </div>
+      </header>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
