--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="About Us Webpage/about us.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="#" >Courses</a>
