--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="#">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about us.html">About</a>
+              <a class="nav-link" href="about us.html">AboutUs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="#" >Courses</a>
