--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         </div>
         <div class="col-12 col-sm-4 align-self-center">
           <div class="text-center">
-            <a  href="http://google.com/+"><i class="fas fa-google-plus"></i></a>
-            <a  href="http://www.facebook.com/profile.php?id="><i class="fas fa-facebook"></i></a>
-            <a  href="http://www.linkedin.com/in/"><i class="fas fa-linkedin"></i></a>
-            <a  href="http://twitter.com/"><i class="fas fa-twitter"></i></a>
-            <a  href="http://youtube.com/"><i class="fas fa-youtube"></i></a>
-            <a  href="mailto:"><i class="fas fa-envelope-o"></i></a>
+            <a class="profile-link" href="http://google.com/+"><i class="fab fa-google fa-lg"></i></a>
+            <a class="profile-link" href="http://www.facebook.com/profile.php?id="><i class="fab fa-facebook-square fa-lg"></i></a>
+            <a class="profile-link" href="http://www.linkedin.com/in/"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a class="profile-link" href="http://twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
+            <a class="profile-link" href="http://youtube.com/"><i class="fab fa-youtube fa-lg"></i></a>
+            <a class="profile-link" href="mailto:"><i class="fas fa-envelope fa-lg"></i></a>
           </div>
         </div>
       </div>
