second page linked to the main page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               Categories.
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">First Year</a>
+              <a class="dropdown-item" href="HTML/secondPage.html">Second Year</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
 
