main page half complete

--- a/index.html
+++ b/index.html
@@ -119,16 +119,64 @@
 
   </div>
 
+<!--------------------------------------------------card----------------------------------------------->
+  <br>
+  <br>
+<div class="container">
+  <div class="card" style="border-radius: 20px">
+    <div class="row">
+      <div class="col-md-4" >
+        <img src="images/vivekananda-11-1515652951.jpg" style="height: 300px;width: 100%"   class="img-fluid">
+      </div>
+      <div class="col-md-8" style="background-color: skyblue">
+<br>
+        <br>
+        <br>
+        <br>
+
+       <blockquote><q><i>Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced.</i></q></blockquote>
+
+
+      </div>
 
 
 
-  
+    </div>
+  </div>
+<br>
+  <br>
+
+  <div class="card">
+    <div class="row" >
+      <div class="col-md-4">
+        <img src="images/download.jpeg" style="height: 300px;width: 100%"   class="img-fluid">
+      </div>
+      <div class="col-md-8" style="background-color: #8fd19e">
+
+        <br>
+        <br>
+        <br>
+
+      <blockquote>  <p> <i>"Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced."</i></p>
+
+
+</blockquote>
+
+      </div>
+
+
+
+    </div>
+  </div>
 
 
 
 
+</div>
 
 
+
+  <!-------------------------------------------------------------------------------------------------------------------->
   <footer class="footer">
     <div class="container">
       <div class="row">
