main page half complete

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <br>
   <br>
 <div class="container">
-  <div class="card" style="border-radius: 20px">
+  <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="row">
       <div class="col-md-4" >
         <img src="images/vivekananda-11-1515652951.jpg" style="height: 300px;width: 100%"   class="img-fluid">
@@ -146,7 +146,7 @@
 <br>
   <br>
 
-  <div class="card">
+  <div class="card" style="box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="row" >
       <div class="col-md-4">
         <img src="images/download.jpeg" style="height: 300px;width: 100%"   class="img-fluid">
@@ -157,7 +157,7 @@
         <br>
         <br>
 
-      <blockquote>  <p> <i>"Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced."</i></p>
+      <blockquote>  <p > <i >"Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced."</i></p>
 
 
 </blockquote>
