--- a/index.html
+++ b/index.html
@@ -176,49 +176,161 @@
 
 
 
-  <!-------------------------------------------------------------------------------------------------------------------->
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-4 offset-1 col-sm-2">
-          <h5>Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#">Home</a></li>
-            <li><a href="about us.html">About</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-7 col-sm-5">
-          <h5>Our Address</h5>
-          <address>
-            Redmond, Washington
-            <br>
-            United States Of America
-            <br>
-            <i class="fa fa-phone fa-lg"></i>: +918787203291<br>
-            <i class="fa fa-fax fa-lg"></i>: +918601488273<br>
-            <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:akshat.sinha_cs18@gla.ac.in">akshat.sinha_cs18@gla.ac.in</a>
-          </address>
-        </div>
-        <div class="col-12 col-sm-4 align-self-center">
-          <div class="text-center">
-            <a class="profile-link" href="http://google.com/+"><i class="fab fa-google fa-lg"></i></a>
-            <a class="profile-link" href="http://www.facebook.com/profile.php?id="><i class="fab fa-facebook-square fa-lg"></i></a>
-            <a class="profile-link" href="http://www.linkedin.com/in/"><i class="fab fa-linkedin fa-lg"></i></a>
-            <a class="profile-link" href="http://twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
-            <a class="profile-link" href="http://youtube.com/"><i class="fab fa-youtube fa-lg"></i></a>
-            <a class="profile-link" href="mailto:"><i class="fas fa-envelope fa-lg"></i></a>
+  <!-------------------------------------------------------------------footer------------------------------------------------->
+  <!-- Footer -->
+  <footer class="page-footer font-small unique-color-dark">
+
+    <div class="footer-social-links">
+      <div class="container">
+
+        <!-- Grid row-->
+        <div class="row py-4 d-flex align-items-center">
+
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+            <h5 class="mb-0">Get connected with us on social networks!</h5>
           </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-7 text-center text-md-right">
+
+            <div class="sec-3">
+              <ul>
+                <!-- Facebook -->
+                <li><a href=""><i class="fab fa-facebook-f white-text mr-4"></i></a></li>
+                <!-- Twitter -->
+                <li><a href=""><i class="fab fa-twitter white-text mr-4"></i></a></li>
+                <!-- Google +-->
+                <li><a href=""><i class="fab fa-google-plus-g white-text mr-4"></i></a></li>
+                <!--Linkedin -->
+                <li><a href=""><i class="fab fa-linkedin-in white-text mr-4"></i></a></li>
+                <!--Instagram-->
+                <li><a href=""><i class="fab fa-instagram white-text"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- Grid column -->
+
         </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-auto"> 
-          <p>© Copyright 2020 Edu_Hub</p>
-        </div>
+        <!-- Grid row-->
+
       </div>
     </div>
+
+    <!-- Footer Links -->
+
+    <div class="new-footer">
+      <div class="container text-center text-md-left mt-5">
+
+        <!-- Grid row -->
+        <div class="row mt-3">
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+            <!-- Content -->
+            <h6 class="text-uppercase font-weight-bold">Edu_Hub</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+              consectetur
+              adipisicing elit.</p>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="text-decoration: none;">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Products</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <div class="products">
+              <p>
+                <a href="#">First Year</a>
+              </p>
+              <p>
+                <a href="#">Second Year</a>
+              </p>
+              <p>
+                <a href="#">Third Year</a>
+              </p>
+              <p>
+                <a href="#">Fourth Year</a>
+              </p>
+            </div>
+
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <div class="useful-links">
+              <p>
+                <a href="#">Your Account</a>
+              </p>
+              <p>
+                <a href="#">Previous Year Papers</a>
+              </p>
+              <p>
+                <a href="#">Practicals</a>
+              </p>
+              <p>
+                <a href="#">Our Team</a>
+              </p>
+
+
+            </div>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Contact</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>
+              <i class="fas fa-home mr-3"></i> Allipur , Allahabad</p>
+            <p>
+              <i class="fas fa-envelope mr-3"></i>akshat.sinha_cs18@gla.ac.in</p>
+            <p>
+              <i class="fas fa-phone mr-3"></i> 64946645312</p>
+            <p>
+              <i class="fas fa-print mr-3"></i> 5413513535</p>
+
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </div>
+
+    </div>
+
+
+
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3" style="color: white;  background-color: black ">© 2020 Copyright:
+      Edu_Hub
+
+    </div>
+    <!-- Copyright -->
+
   </footer>
+  <!-- Footer -->
+
+
+
+  <!------------------------------------------------------------------ footer------------------------------------------------>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
