add links to the footer

--- a/index.html
+++ b/index.html
@@ -232,9 +232,7 @@
             <!-- Content -->
             <h6 class="text-uppercase font-weight-bold">Edu_Hub</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-              consectetur
-              adipisicing elit.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit perspiciatis, minima enim doloremque placeat repudiandae?</p>
 
           </div>
           <!-- Grid column -->
@@ -250,7 +248,7 @@
                 <a href="#">First Year</a>
               </p>
               <p>
-                <a href="#">Second Year</a>
+                <a href="HTML/secondPage.html">Second Year</a>
               </p>
               <p>
                 <a href="#">Third Year</a>
@@ -281,7 +279,7 @@
                 <a href="#">Practicals</a>
               </p>
               <p>
-                <a href="#">Our Team</a>
+                <a href="about us.html">Our Team</a>
               </p>
 
 
