made some changes to footer

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
 
-            <div class="sec-3">
+            <div class="social-media">
               <ul>
                 <!-- Facebook -->
                 <li><a href=""><i class="fab fa-facebook-f white-text mr-4"></i></a></li>
