made some changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- fonticons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- Bootstrap CSS -->
@@ -46,7 +47,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
 
-             
+
 
           <li class="nav-item">
             <a class="nav-link" href="index.html">Login</a>
@@ -119,60 +120,67 @@
 
   </div>
 
-<!--------------------------------------------------card----------------------------------------------->
+  <!--------------------------------------------------card----------------------------------------------->
   <br>
   <br>
-<div class="container">
-  <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-    <div class="row">
-      <div class="col-md-4" >
-        <img src="images/vivekananda-11-1515652951.jpg" style="height: 300px;width: 100%"   class="img-fluid">
+  <div class="container">
+    <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="images/vivekananda-11-1515652951.jpg" style="height: 300px;width: 100%" class="img-fluid">
+        </div>
+        <div class="col-md-8" style="background-color: skyblue">
+          <br>
+          <br>
+          <br>
+          <br>
+
+          <blockquote><q><i>Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea.
+                Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave
+                every other idea alone. This is the way to success, and this is the way great spiritual giants are
+                produced.</i></q></blockquote>
+
+
+        </div>
+
+
+
       </div>
-      <div class="col-md-8" style="background-color: skyblue">
-<br>
-        <br>
-        <br>
-        <br>
-
-       <blockquote><q><i>Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced.</i></q></blockquote>
-
-
-      </div>
-
-
-
     </div>
-  </div>
-<br>
-  <br>
+    <br>
+    <br>
 
-  <div class="card" style="box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-    <div class="row" >
-      <div class="col-md-4">
-        <img src="images/download.jpeg" style="height: 300px;width: 100%"   class="img-fluid">
+    <div class="card" style="box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="images/download.jpeg" style="height: 300px;width: 100%" class="img-fluid">
+        </div>
+        <div class="col-md-8" style="background-color: #8fd19e">
+
+          <br>
+          <br>
+          <br>
+
+          <blockquote>
+            <p> <i>"Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the
+                brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every
+                other idea alone. This is the way to success, and this is the way great spiritual giants are
+                produced."</i></p>
+
+
+          </blockquote>
+
+        </div>
+
+
+
       </div>
-      <div class="col-md-8" style="background-color: #8fd19e">
-
-        <br>
-        <br>
-        <br>
-
-      <blockquote>  <p > <i >"Take up one idea. Make that one idea your life; dream of it; think of it; live on that idea. Let the brain, the body, muscles, nerves, every part of your body be full of that idea, and just leave every other idea alone. This is the way to success, and this is the way great spiritual giants are produced."</i></p>
-
-
-</blockquote>
-
-      </div>
-
-
-
     </div>
+
+
+
+
   </div>
-
-
-
-
-</div>
 
 
 
@@ -231,8 +239,9 @@
 
             <!-- Content -->
             <h6 class="text-uppercase font-weight-bold">Edu_Hub</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit perspiciatis, minima enim doloremque placeat repudiandae?</p>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit perspiciatis, minima enim doloremque
+              placeat repudiandae?</p>
 
           </div>
           <!-- Grid column -->
@@ -242,7 +251,7 @@
 
             <!-- Links -->
             <h6 class="text-uppercase font-weight-bold">Products</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+
             <div class="products">
               <p>
                 <a href="#">First Year</a>
@@ -267,7 +276,7 @@
 
             <!-- Links -->
             <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+
             <div class="useful-links">
               <p>
                 <a href="#">Your Account</a>
@@ -293,7 +302,7 @@
 
             <!-- Links -->
             <h6 class="text-uppercase font-weight-bold">Contact</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+
             <p>
               <i class="fas fa-home mr-3"></i> Allipur , Allahabad</p>
             <p>
