--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Login</a>
+            <span id="loginButton"class="nav-link" >Login</span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Signup</a>
@@ -63,6 +63,51 @@
     </div>
   </nav>
 
+
+
+  <!----------------------------------------------------------------- login modal -------------------------------------------------------------------->
+  
+  <div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header navbar-dark" style="color:white; background-color: rgb(45, 42, 54);">
+          <h4 class="modal-title">Login </h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body" style="background-color:#eeecf1;">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-sm-4">
+                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+              </div>
+              <div class="form-group col-sm-4">
+                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+              </div>
+              <div class="col-sm-auto">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox">
+                  <label class="form-check-label"> Remember me
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <!------------------------------------------------------------------- login modal ----------------------------------------------------------------------->
 
   <div class="container">
     <h1 id="h1he">Edu_hub : Get Ready to Learn!</h1>
@@ -338,6 +383,8 @@
 
 
   <!------------------------------------------------------------------ footer------------------------------------------------>
+  
+  
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -349,6 +396,15 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+
+    <script>
+       $('#loginButton').click(function() {
+        $('#loginModal').modal('show');
+      });
+
+
+
+    </script>
 </body>
 
 </html>
