--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <!-- fonticons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <!-- Bootstrap CSS -->
   <title>Edu_Hub</title>
@@ -53,7 +54,7 @@
             <span id="loginButton"class="nav-link" >Login</span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Signup</a>
+            <a id="signupButton" class="nav-link" >Signup</a>
           </li>
         </ul>
       </div>
@@ -65,7 +66,7 @@
 
 
 
-  <!----------------------------------------------------------------- login modal -------------------------------------------------------------------->
+   <!----------------------------------------------------------------- login modal -------------------------------------------------------------------->
   
   <div id="loginModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
@@ -104,10 +105,53 @@
   </div>
 
 
-
-
-
   <!------------------------------------------------------------------- login modal ----------------------------------------------------------------------->
+ 
+ 
+ 
+ 
+ 
+ 
+ <!--------------------------------------------------------------------- Sign UP modal --------------------------------------------------------------------->
+
+ 
+
+<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-bottom-0" style="background-color:rgb(45, 42, 54) ;">
+         <h5 class="modal-title" id="exampleModalLabel" style="color: white;">Create Account</h5>
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+         <span aria-hidden="true">&times;</span>
+        </button>
+        
+      </div>
+      <form>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="email1">Email address</label>
+            <input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">Your information is safe with us.</small>
+          </div>
+          <div class="form-group">
+            <label for="password1">Password</label>
+            <input type="password" class="form-control" id="password1" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="password1">Confirm Password</label>
+            <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
+          </div>
+        </div>
+        <div class="modal-footer border-top-0 d-flex justify-content-center">
+          <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+  <!--------------------------------------------------------------------- Sign UP modal --------------------------------------------------------------------->
+ 
 
   <div class="container">
     <h1 id="h1he">Edu_hub : Get Ready to Learn!</h1>
@@ -402,7 +446,9 @@
         $('#loginModal').modal('show');
       });
 
-
+      $('#signupButton').click(function(){
+        $('#signupModal').modal('show');
+      });
 
     </script>
 </body>
