--- a/HTML/firstYear/firstSemester.html
+++ b/HTML/firstYear/firstSemester.html
@@ -18,6 +18,8 @@
     <title>First Semster</title>
 </head>
 <body>
-    
+    <div class="header">
+        First Semester 
+     </div>
 </body>
 </html>
