--- a/HTML/firstYear/firstSemester.html
+++ b/HTML/firstYear/firstSemester.html
@@ -173,5 +173,47 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-4 offset-1 col-sm-2">
+              <h5>Links</h5>
+              <ul class="list-unstyled">
+                <li><a href="#">Home</a></li>
+                <li><a href="about us.html">About</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-7 col-sm-5">
+              <h5>Our Address</h5>
+              <address>
+                Redmond, Washington
+                <br>
+                United States Of America
+                <br>
+                <i class="fa fa-phone fa-lg"></i>: +918787203291<br>
+                <i class="fa fa-fax fa-lg"></i>: +918601488273<br>
+                <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:akshat.sinha_cs18@gla.ac.in">akshat.sinha_cs18@gla.ac.in</a>
+              </address>
+            </div>
+            <div class="col-12 col-sm-4 align-self-center">
+              <div class="text-center">
+                <a class="profile-link" href="http://google.com/+"><i class="fab fa-google fa-lg"></i></a>
+                <a class="profile-link" href="http://www.facebook.com/profile.php?id="><i class="fab fa-facebook-square fa-lg"></i></a>
+                <a class="profile-link" href="http://www.linkedin.com/in/"><i class="fab fa-linkedin fa-lg"></i></a>
+                <a class="profile-link" href="http://twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
+                <a class="profile-link" href="http://youtube.com/"><i class="fab fa-youtube fa-lg"></i></a>
+                <a class="profile-link" href="mailto:"><i class="fas fa-envelope fa-lg"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-auto">
+              <p>© Copyright 2020 Edu_Hub</p>
+            </div>
+          </div>
+        </div>
+    </footer>
 </body>
 </html>
