--- a/HTML/firstYear/firstSemester.html
+++ b/HTML/firstYear/firstSemester.html
@@ -16,6 +16,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>First Semster</title>
+    <style>
+        .header{
+          width: 100%;
+          height: 70px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 60px;
+          background:brown;
+          color: aqua;
+          font-variant: small-caps;
+          /*border: brown solid 3px;*/
+          border-radius: 6px;
+          margin-bottom: 40px;
+      }
+    </style>
 </head>
 <body>
     <div class="header">
