adding css  to footer

--- a/HTML/firstYear/firstSemester.html
+++ b/HTML/firstYear/firstSemester.html
@@ -77,6 +77,21 @@
         .semesters ul li div button a:hover{
             color: orange;
         }
+        .footer{
+  background-color: lightcyan;
+  margin: 50px 0px auto;
+  padding: 20px 0px 20px 0px;
+}
+/* fonticons css */
+.profile-link i{
+  color: black;
+  font-size: 30px;
+  margin-left: 25px;
+}
+
+.profile-link i:hover{
+color: #dc3545;
+}
     </style>
 </head>
 <body>
