adding second semester code

--- a/HTML/firstYear/2nd_semester.html
+++ b/HTML/firstYear/2nd_semester.html
@@ -160,7 +160,7 @@ color: #dc3545;
 </head>
 <body>
     <div class="header">
-        First Semester 
+        Second Semester 
     </div>
     <div class="semesters">
         <div class="semester-sub" style="border-top: none;">
