--- a/HTML/CS Branch/Third Year/5th_semester.html
+++ b/HTML/CS Branch/Third Year/5th_semester.html
@@ -160,7 +160,7 @@ color: #dc3545;
 </head>
 <body>
     <div class="header">
-        Fourth Semester 
+        Fifth Semester 
     </div>
     <div class="semesters">
         <div class="semester-sub" style="border-top: none;">
