--- a/secondYear.html
+++ b/secondYear.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -49,7 +61,7 @@ img {vertical-align: middle;}
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 95px;
+  bottom: 118px;
   width: 100%;
   text-align: center;
   font-size: 21px ;
@@ -83,18 +95,18 @@ img {vertical-align: middle;}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 1000000.5s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 1000000.5s;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .9} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .9} 
   to {opacity: 1}
 }
 
@@ -105,7 +117,7 @@ img {vertical-align: middle;}
 .column {
   float: left;
   width: 50%;
-  padding: 1px 200px;
+  padding: 1px 180px;
   height: 380px; 
 }
 
@@ -114,13 +126,26 @@ img {vertical-align: middle;}
   display: table;
   clear: both;
 }
-
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #3B69AC;
+.footer{
+  background-color: lightcyan;
+  margin: 5px 0px auto;
+  padding: 20px 0px 20px 0px;
+}
+/* fonticons css */
+.profile-link i{
+  color: black;
+  font-size: 30px;
+  margin-left: 25px;
 }
 
+.profile-link i:hover{
+color: #dc3545;
+}
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
 </style>
 </head>
 <body>
@@ -130,7 +155,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
   <img src="images/blog-banner.png" style="width:100%">
-  <div class="text"><h1>B.Tech CSE First Year</h1></div>
+  <div class="text"><h1><b>B.Tech CSE Second Year</b></h1></div>
 </div>
 
 <div class="mySlides fade">
@@ -190,37 +215,78 @@ function showSlides(n) {
     <h2>Semester 1</h2>
     <h3>Subjects:</h3>
     <ul>
-      <li><a href="#">COMPUTER PROGRAMMING</a></li>
-      <li><a href="#">COMPUTER PROGRAMMING LAB</a></li>
-      <li><a href="#">ENGINEERING MATHEMATICS I</a></li>
-      <li><a href="#">BASIC ELECTRICAL ENGINEERING</a></li>
-      <li><a href="#">ELECTRICAL ENGINEERING LAB</a></li>
-      <li><a href="#">ENGINEERING CHEMISTRY</a></li>
-      <li><a href="#">ENGINEERING CHEMISTRY LAB</a></li>
-      <li><a href="#">ENGLISH LANGUAGE SKILLS FOR COMMUNICATION I</a></li>
-      <li><a href="#">ENGLISH LANGUAGE LAB I</a></li>
-      <li><a href="#">ENGINEERING DRAWING LAB</a></li>
+      <li><a href="#">OBJECT ORIENTED PROGRAMMING</a></li>
+      <li><a href="#">OBJECT ORIENTED PROGRAMMING LAB</a></li>
+      <li><a href="#">ENGINEERING MATHEMATICS III</a></li>
+      <li><a href="#">COMPUTER ORGANISATION</a></li>
+      <li><a href="#">COMPUTER ORGANISATION LAB</a></li>
+      <li><a href="#">DATABASE MANAGEMENT SYSTEM</a></li>
+      <li><a href="#">DATABASE MANAGEMENT SYSTEM LAB</a></li>
+      <li><a href="#">OPERATING SYSTEMS</a></li>
+      <li><a href="#">OPERATING SYSTEMS LAB</a></li>
+      <li><a href="#">ENGLISH FOR PROFESSIONAL PURPOSES-I</a></li>
+      <li><a href="#">ETHICS AND VALUES</a></li>
+      <li><a href="#">SOFT SKILLS-I</a></li>
     </ul>
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2>Semester 2</h2>
     <h3>Subjects:</h3>
     <ul>
-      <li><a href="#">PYTHON PROGRAMMING LAB</a></li>
-      <li><a href="#">PYTHON PROGRAMMING</a></li>
-      <li><a href="#">ENGINEERING MATHEMATICS II</a></li>
-      <li><a href="#">ELECTRONICS ENGINEERING</a></li>
-      <li><a href="#">ELECTRONICS LAB I</a></li>
-      <li><a href="#">ENGINEERING PHYSICS</a></li>
-      <li><a href="#">ENGINEERING PHYSICS LAB</a></li>
-      <li><a href="#">ENGLISH LANGUAGE SKILLS FOR COMMUNICATION II</a></li>
-      <li><a href="#">ENGLISH LANGUAGE LAB II</a></li>
-      <li><a href="#">BASIC MECHANICAL ENGINEERING</a></li>
-      <li><a href="#">ENGINEERING WORKSHOP PRACTICE LAB</a></li>
+      <li><a href="#">DATA STRUCTURES AND ALGORITHMS</a></li>
+      <li><a href="#">DATA STRUCTURES AND ALGORITHMS LAB</a></li>
+      <li><a href="#">DISCRETE MATHEMATICS</a></li>
+      <li><a href="#">INTRODUCTION TO MICROPROCESSORS</a></li>
+      <li><a href="#">MICROPROCESSORS LAB</a></li>
+      <li><a href="#">SOFTWARE ENGINEERING</a></li>
+      <li><a href="#">COMPUTER NETWORKS</a></li>
+      <li><a href="#">ENGLISH FOR PROFESSIONAL PURPOSES-II</a></li>
+      <li><a href="#">ENVIRONMENTAL STUDIES</a></li>
+      <li><a href="#">SOFT SKILLS-II</a></li>
     </ul>
   </div>
 </div>
-<div class="footer">
-</div>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-4 offset-1 col-sm-2">
+        <h5>Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#">Home</a></li>
+          <li><a href="about us.html">About</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-7 col-sm-5">
+        <h5>Our Address</h5>
+        <address>
+          GLA University
+          <br>
+          Mathura,Uttar Pradesh,India.
+          <br>
+          <i class="fa fa-phone fa-lg"></i>: +918787203291<br>
+          <i class="fa fa-fax fa-lg"></i>: +918601488273<br>
+          <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:harshit.saxena_cs18@gla.ac.in">harshit.saxena_cs18@gla.ac.in</a>
+        </address>
+      </div>
+      <div class="col-12 col-sm-4 align-self-center">
+        <div class="text-center">
+          <a class="profile-link" href="http://google.com/+"><i class="fab fa-google fa-lg"></i></a>
+          <a class="profile-link" href="http://www.facebook.com/profile.php?id="><i class="fab fa-facebook-square fa-lg"></i></a>
+          <a class="profile-link" href="http://www.linkedin.com/in/"><i class="fab fa-linkedin fa-lg"></i></a>
+          <a class="profile-link" href="http://twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
+          <a class="profile-link" href="http://youtube.com/"><i class="fab fa-youtube fa-lg"></i></a>
+          <a class="profile-link" href="mailto:"><i class="fas fa-envelope fa-lg"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-auto"> 
+        <p>© Copyright 2020 Edu_Hub</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html> 
