--- a/secondYear1stSemester.html
+++ b/secondYear1stSemester.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>First Semster</title>
+    <title>2nd Year/1st Semester</title>
     <style>
         @media(min-width: 100px) and (max-width: 450px){.header{
           width: 100%;
@@ -189,7 +189,7 @@ img {vertical-align: middle;}
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 118px;
+  bottom: 115px;
   width: 100%;
   text-align: center;
   font-size: 21px ;
@@ -248,7 +248,8 @@ img {vertical-align: middle;}
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <img src="images/blog-banner.png" style="width:100%">
-          <div class="text"><h1><b>B.Tech CSE Second Year</b></h1></div>
+          <div class="text"><h1><b>B.Tech CSE Second Year</b></h1>
+            <h2><b>1st SEMESTER</b></h2></div>
         </div>
         
         <div class="mySlides fade">
