--- a/HTML/CS Branch/4th_year.html
+++ b/HTML/CS Branch/4th_year.html
@@ -254,7 +254,7 @@
         </script>
         <div class="mains">
             <div class="semester-1">
-                <div id="sem-1-icon"><a href="">Semester-7</a></div>
+                <div id="sem-1-icon"><a href="https://varunsaxena1332001.github.io/EDU_HUB/HTML/CS Branch/Fourth Year/7th_semester.html">Semester-7</a></div>
                 
                 <div id="sem-1-info">  Semester 1 contains the program elective subjects of the Department of Computer Engineering 
                   and Applications under Choice Based Credit System(CBCS) respectively.
@@ -268,7 +268,7 @@
                   at a little advanced stage
                 
                 </div>
-                <div id="sem-2-icon"><a href="">Semester-8</a></div>
+                <div id="sem-2-icon"><a href="https://varunsaxena1332001.github.io/EDU_HUB/HTML/CS Branch/Fourth Year/8th_semester.html">Semester-8</a></div>
             </div>
         </div>
 
