sem 3 and sem 4 completed

--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -12,14 +12,14 @@
     <!-- font icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="semester1.css">
-    <title>Semester-1</title>
+    <link rel="stylesheet" href="semester4.css">
+    <title>Semester-4</title>
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid jumbo-img">
         <div class="container">
-            <h1 class="display-4">SEMESTER - 1</h1>
+            <h1 class="display-4">SEMESTER - 4</h1>
             <p class="lead">Here is the notes of all subjects of semester 1 including all modules</p>
 
         </div>
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-1">
-                    <h3>DS</h3>
+                    <h3>Environmental Studies</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, earum.</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -42,7 +42,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>Math</h3>
+                    <h3>Data Structures And Algorithms</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, nemo.</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -55,7 +55,7 @@
 
             <div class="col-md-4">
                 <div class="card card-3">
-                    <h3>Quant</h3>
+                    <h3>Introduction to Microprocessors</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, eligendi!</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -68,7 +68,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>Eng</h3>
+                    <h3>Computer Networks</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -81,7 +81,7 @@
 
             <div class="col-md-4">
                 <div class="card card-1">
-                    <h3>Object Oriented Programming </h3>
+                    <h3>Software Engineering</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -94,7 +94,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>Object Oriented Programming Lab</h3>
+                    <h3>Discrete Mathematics</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -107,7 +107,7 @@
 
             <div class="col-md-4">
                 <div class="card card-3">
-                    <h3>COMPUTER ORGANISATION </h3>
+                    <h3>English For Professional Purposes - II</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -120,7 +120,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>COMPUTER ORGANISATION LAB</h3>
+                    <h3>Data Structures And Algorithms Lab</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -133,7 +133,7 @@
 
             <div class="col-md-4">
                 <div class="card card-1">
-                    <h3>DBMS</h3>
+                    <h3>Microprocessors Lab</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -146,7 +146,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>DBMS lab</h3>
+                    <h3>Introduction To Cyber Security</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -159,7 +159,7 @@
 
             <div class="col-md-4">
                 <div class="card card-3">
-                    <h3>OS</h3>
+                    <h3>General Proficiency</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
@@ -172,20 +172,7 @@
 
             <div class="col-md-4">
                 <div class="card card-2">
-                    <h3>OS lab</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card card-1">
-                    <h3>Ethics And Values</h3>
+                    <h3>Soft Skills - II</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
